--- a/Documentations/Sprint_1/documentation_utilisateur_v1.adoc
+++ b/Documentations/Sprint_1/documentation_utilisateur_v1.adoc
@@ -41,46 +41,46 @@ link:../guide_installation.adoc[Guide d'installation]
 
 === Fonctionnalités principales
 
-* **Vérification de la sécurité avant le vol** 
+==== Vérification de la sécurité avant le vol
 
 image::../../img/prevol.jpg[align="center", width=50%]
 
-** Vérification des conditions météo (et de vols) par le parapentiste  
+===== Vérification des conditions météo (et de vols) par le parapentiste  
 
 image::../../img/cond_vol.jpg[align="center", width=50%]
 
-** Questionnaire pour valider l’état physique et mental du pilote  
+===== Questionnaire pour valider l’état physique et mental du pilote  
 
 image::../../img/met_int.jpg[align="center", width=50%]
 
-** Questionnaire pour valider l’état du matériel  
+===== Questionnaire pour valider l’état du matériel  
 
 image::../../img/mavie.jpg[align="center", width=50%]
 
-** Exercice de respiration et de stress (optionnel) 
+===== Exercice de respiration et de stress (optionnel) 
 
 image::../../img/gest_resp.jpg[align="center", width=50%]
  
 
-* **Enregistrement des données de vol**  
+==== Enregistrement des données de vol
 
 image::../../img/postvol.jpg[align="center", width=50%]
 
-** Formulaire complet pour saisir les informations relatives au vol (site, météo, type de vol, observations) et les enregistrer 
+===== Formulaire complet pour saisir les informations relatives au vol (site, météo, type de vol, observations) et les enregistrer 
 
 image::../../img/debrief.jpg[align="center", width=50%]
 
-** Remplissage et affichage d'une rose de compétences pour suivre son niveau.
+===== Remplissage et affichage d'une rose de compétences pour suivre son niveau.
 
 image::../../img/rose1.jpg[align="center", width=50%]
 
 image::../../img/rose2.jpg[align="center", width=50%]
 
-* **Consultation de l’historique des vols**  
+==== Consultation de l’historique des vols 
 
 image::../../img/histo.jpg[align="center", width=50%]
 
-** Accéder à l’historique des vols précédents pour analyser les données et les incidents éventuels  
+===== Accéder à l’historique des vols précédents pour analyser les données et les incidents éventuels  
 
 image::../../img/test_histo.jpg[align="center", width=50%]
 
